--- a/package.json
+++ b/package.json
@@ -9,16 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "antd": "^5.18.1",
+    "http-status": "^1.7.4",
+    "mongoose": "^8.4.1",
+    "next": "^14.2.4",
+    "razorpay": "^2.9.4",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.4"
+    "react-hook-form": "^7.51.5",
+    "react-icons": "^5.2.1",
+    "sass": "^1.77.5"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8",
-    "eslint-config-next": "14.2.4"
+    "eslint-config-next": "14.2.4",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5.4.5"
   }
 }
